client/src/app/patterns/atoms/icon-button/icon-button.scss
//====================================================|
// ATOMS: ICON BUTTON


//--------------------------| Data

$glyph-size: 14px;

$icons-path: '../../../../assets/icons';

$icons: (
  'gallery': 'nav',
  'author':  'profile',
  'contact': 'email',
  'player':  'volume'
);


//--------------------------| Root

.root {
  @include border-radius(50%);
  @include transition(background $transition-speed linear);

  display: block;
  width: $icon-size;
  height: $icon-size;
  overflow: hidden;
  font-size: 0;
  text-align: center;

  &:hover {
    background-color: rgba($col-black, 0.75);
  }

  &[data-active='true'] {
    background-color: rgba($col-white, 0.25);
  }
}


//--------------------------| Roles

@each $role in ('gallery' 'author' 'contact' 'player') {
  .root[data-role='#{$role}'] .glyph {
    $icon: map-get($icons, $role);
    $path: '#{$icons-path}/icon-#{$icon}.svg';

    background-image: url($path);
  }
}


//--------------------------| Player

.root[data-role='player'] {
  &:not([data-mode]) {
    pointer-events: none;
    opacity: 0;
  }

  &[data-mode='pause'] span {
    background-position: left top;
  }

  &[data-mode='play'] span {
    background-position: left bottom;
  }

  @media screen and (max-width: $breakpoint-desktop - 1) {
    display: none;
  }
}


//--------------------------| Glyph

.glyph {
  display: inline-block;
  width: $glyph-size;
  height: $glyph-size;
  margin-top: 7px;
  background-repeat: no-repeat;
  background-position: center;
  background-size: $glyph-size auto;
}

